Allow to optionally include status and latest builds as test suite properties
