# specs/api.yaml
@@ -1140,6 +1140,8 @@ paths:
         - {}
       parameters:
         - $ref: "#/components/parameters/suite_uuid"
+        - $ref: "#/components/parameters/suite_status"
+        - $ref: "#/components/parameters/suite_latest_builds"
       responses:
         "200":
           description: TestSuite object
@@ -1568,6 +1570,24 @@ components:
         type: string
       required: true
       example: e3208b02-69b6-4e32-a3dc-b93967d30e2c
+    suite_status:
+      name: "status"
+      in: query
+      schema:
+        type: boolean
+        default: false
+      description: |
+        `true` to include the suite status
+      example: "false"
+    suite_latest_builds:
+      name: "latest_builds"
+      in: query
+      schema:
+        type: boolean
+        default: false
+      description: |
+        `true` to include the latest builds which contribute to the suite status
+      example: "false"
     instance_uuid:
       name: "instance_uuid"
       description: "Universal unique identifier of the test instance"
@@ -2462,26 +2482,28 @@ components:
               example: ">=0.70"
 
     TestSuite:
-      type: object
-      properties:
-        uuid:
-          type: string
-          description: Universal unique identifier of the test suite
-          example: e3208b02-69b6-4e32-a3dc-b93967d30e2c
-        roc_suite:
-          type: string
-          description: RO-Crate identifier of the TestSuite
-          example: "#test1"
-        name:
-          type: string
-          description: A name for the test suite.
-          example: Workflow Test Suite
-        definition:
-          $ref: "#/components/schemas/TestSuiteDefinition"
-        instances:
-          type: array
-          items:
-            $ref: "#/components/schemas/TestInstance"
+      allOf:
+        - type: object
+          properties:
+            uuid:
+              type: string
+              description: Universal unique identifier of the test suite
+              example: e3208b02-69b6-4e32-a3dc-b93967d30e2c
+            roc_suite:
+              type: string
+              description: RO-Crate identifier of the TestSuite
+              example: "#test1"
+            name:
+              type: string
+              description: A name for the test suite.
+              example: Workflow Test Suite
+            definition:
+              $ref: "#/components/schemas/TestSuiteDefinition"
+            instances:
+              type: array
+              items:
+                $ref: "#/components/schemas/TestInstance"
+        - $ref: "#/components/schemas/TestSuiteStatusProperties"
       required:
         - uuid
         - instances
@@ -2496,13 +2518,9 @@ components:
       required:
         - items
 
-    TestSuiteStatus:
+    TestSuiteStatusProperties:
       type: object
       properties:
-        suite_uuid:
-          type: string
-          description: Universal unique identifier of the test suite
-          example: e3208b02-69b6-4e32-a3dc-b93967d30e2c
         status:
           $ref: "#/components/schemas/AggregateTestStatus"
         latest_builds:
@@ -2512,7 +2530,18 @@ components:
         reason:
           description: Reason why the status is unavailable
           type: string
+          example: "Unreachable testing service"
           nullable: true
+
+    TestSuiteStatus:
+      allOf:
+        - type: object
+          properties:
+            suite_uuid:
+              type: string
+              description: Universal unique identifier of the test suite
+              example: e3208b02-69b6-4e32-a3dc-b93967d30e2c
+        - $ref: "#/components/schemas/TestSuiteStatusProperties"
       required:
         - suite_uuid
         - status
